# mediensteuerung-probe

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_linux.md  Dockerfile.linux-test  LICENSE  README.md  docker-compose.linux-test.yml  docker-compose.test.yml  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.lock.windows.txt  requirements.txt  userconfig.example.txt
.github/: dependabot.yml
.github/workflows/: test.yml
docs/: migration-from-avorus.md  quick-test-real-hardware.md  testing.md
installers/: README.md
installers-linux/: README.md
lib/win32/: LICENSE.txt  SHA256SUMS
mosquitto/: test.conf
scripts/: hardware-test-linux.sh  hardware-test-windows.ps1  install-linux.sh  install-windows.ps1  mpv_control.example.sh  prepare-offline-linux.sh  prepare-offline.ps1  smoke-test.sh
src/: app.py  probe.py
src/methods/: __init__.py  _linux.py  _plugins.py  _stub.py  _win32.py  sensors.py
src/misc/: __init__.py
standalone-installer/: PACKAGE-README.txt  README.md  build-standalone-installer.ps1  config.txt.example  install.cmd  install.ps1
standalone-installer-linux/: PACKAGE-README.txt  README.md  build-standalone-installer-linux.sh  config.env.example  install.sh
systemd/: humboldt-probe.service
tests/: _certs.py  conftest.py  sitecustomize.py  test_app.py  test_integration.py  test_methods.py  test_methods_linux.py  test_methods_win32.py  test_misc.py  test_probe.py
