# Tool configuration only.
#
# This project is NOT a packaged Python distribution — deployment is
# `git clone` + `pip install -r requirements.lock.txt`. The previous
# [project] / [project.optional-dependencies] / [project.urls]
# sections were half-formal (no [build-system], not on PyPI) and have
# been removed. Dependencies are pinned in requirements.txt /
# requirements.lock.txt; Python version compatibility is the operator's
# responsibility (3.9-3.13 on Linux, 3.13 on Windows — see README).

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
filterwarnings = [
    "error::DeprecationWarning",
]
markers = [
    "integration: requires a running MQTT broker (PROBE_TEST_BROKER:PROBE_TEST_PORT, default 127.0.0.1:11883). Auto-skipped if no broker is reachable. Run: mosquitto -p 11883 -v &, then pytest -m integration.",
    "probe_config(methods, capabilities): override the running_probe-fixture's PROBE_METHODS / PROBE_CAPABILITIES for this test.",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
